<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HalamanUtama">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="#C4CD65"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:textSize="24dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="20dp"
        app:cardElevation="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:text="160"
            android:textStyle="bold"
            android:textSize="40dp"/>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/kumpulkan" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/luckrydraw"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lucky"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:background="@color/white"
                    android:src="@drawable/booktestdrive"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/bookservice"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookservice"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/ths"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ths"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/catalog"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catalog"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:background="@color/white"
                    android:src="@drawable/calculator"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculator"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/claiminsurance"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/claim"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/serviceberkala"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/tipsandtrick"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tips and Trick"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:background="@color/white"
                    android:src="@drawable/tradein"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:background="@color/white"
                    android:src="@drawable/dealerlocation"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dealer"
                    android:layout_gravity="center"
                    />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>





</LinearLayout>